--- a/Abschlussarbeit.tex
+++ b/Abschlussarbeit.tex
@@ -24,8 +24,8 @@ listof=totoc,version=first									% Abbildungs- und Tabellenverzeichnis ins Inh
 
 %--------------- Packages ----------------
 \usepackage[ngerman]{babel} 								% Neue deutsche Trennmuster
-\usepackage[utf8]{inputenc} 								% direkte Eingabe von Umlauten & Co. 
-\usepackage[T1]{fontenc} 									% T1-Schriften
+\usepackage[utf8]{inputenc}								% direkte Eingabe von Umlauten & Co. 
+\usepackage{fontspec} 									% T1-Schriften
 \usepackage{lmodern}
 \usepackage[format=hang,justification=raggedright,singlelinecheck=off,labelfont={bf,small},textfont=small,skip=4pt]{caption} % Captions ausrichten
 \usepackage[centertags]{amsmath} 							% AMS-Mathematik, centertags zentriert Nummer bei split
