--- a/inhalt/deckblatt.tex
+++ b/inhalt/deckblatt.tex
@@ -13,7 +13,7 @@
 
 %##########################################################
 % BEARBEITUNGSFELDER
-\large{Masterarbeit MA 1234} \\
+\large{Forschungspraktikum FP 1678 \\
 \Large{Titel}
 %Vorsicht: latin1-Codierung kennt kein schafes s
 %##########################################################
@@ -28,13 +28,13 @@
 XX \= XXXXXXXXXXX \= XXXXXXXXXXXXXXXXXXXXXX \kill
 %##########################################################
 % BEARBEITUNGSFELDER
-		\> \textbf{Bearbeiter:} 	\> Name 						\\
-		\>							\> Matrikelnummer							\\
+		\> \textbf{Bearbeiter:} 	\> Name Wenxuan Zhang 					\\
+		\>							\> Matrikelnummer	22594932						\\
  		\>							\>									\\
 		\> \textbf{Betreuer:}		\> Prof. 	\\
-		\>							\> Betreuer			\\
+		\>							\> Betreuer	Yi Jin, M.Sc., Christian Schüßler, M.Eng		\\
 		\>							\> 									\\
-		\> \textbf{Abgabedatum:}	\> Datum
+		\> \textbf{Abgabedatum:}	\> Datum 17.03.2022
 %##########################################################
 \end{tabbing}
 \par}
